src/test/ui/parser/byte-string-literals.stderr
error: unknown byte escape: f
  --> $DIR/byte-string-literals.rs:6:32
   |
LL | static FOO: &'static [u8] = b"\f";
   |                                ^ unknown byte escape

error: unknown byte escape: f
  --> $DIR/byte-string-literals.rs:9:8
   |
LL |     b"\f";
   |        ^ unknown byte escape

error: invalid character in numeric character escape: Z
  --> $DIR/byte-string-literals.rs:10:10
   |
LL |     b"\x0Z";
   |          ^

error: byte constant must be ASCII. Use a \xHH escape for a non-ASCII byte
  --> $DIR/byte-string-literals.rs:11:7
   |
LL |     b"é";
   |       ^

error: unterminated double quote byte string
  --> $DIR/byte-string-literals.rs:12:7
   |
LL |       b"a
   |  _______^
LL | | }
   | |__^

error: aborting due to 5 previous errors

